Estructura de carpetas

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <!--PANTALLA-TRES-->
-        <div id="pantallaTres" style="display: none;">
+        <div id="pantallaTres" style="display: block;">
             <div id="progreso">
                 <div class="title-playerUno">
                     Player uno
