--- a/index.html
+++ b/index.html
@@ -4,23 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+
     <!-- CSS only -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pantallaUno.css">
+    <link rel="stylesheet" href="css/pantallaDos.css">
+    <link rel="stylesheet" href="css/pantallaTres.css">
+    <link rel="stylesheet" href="css/pantallaCuatro.css">
+    <link rel="stylesheet" href="css/query.css">
+    <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Mario-Bros</title>
 </head>
 
 <body class="body">
     <div class="fondo">
-
         <div id="logo">
             <img src="img/logo.png" alt="" class="logo">
         </div>
-        <!--PANTALLA-UNO-->
-        <div id="pantallaUno">
-            <div class="empezar"></div>
+        <!--PANTALLA UNO INICIO-->
+        <div id="pantallaUno" style="display: none;">
+            <div class="cargando">
+                <div class="bienvenido d-flex justify-content-center">
+                    Welcome
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div class="spinner-border text-danger" role="status">
+                        <span class="sr-only"></span>
+                    </div>
+                    <div class="spinner-border text-success " role="status">
+                        <span class="sr-only"></span>
+                    </div>
+                    <div class="spinner-border text-light" role="status">
+                        <span class="sr-only"></span>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!--PANTALLA-DOS-->
+        <!--PANTALLA DOS SELECCION-->
         <div id="pantallaDos" style="display: none;">
             <div class="texto">
                 <p class="texto-p">Para empzar a jugar, tienes que elegir a tus 2 personajes que lucharan entre si y luego presionar <b>GO</b></p>
@@ -36,8 +57,11 @@
 
             </div>
         </div>
-        <!--PANTALLA-TRES-->
-        <div id="pantallaTres" style="display: block;">
+        <!--PANTALLA TRES LUCHA-->
+        <div id="pantallaTres" style="display: none;">
+            <div class="info-lucha">
+                <p>Para que empiece la lucha solo presiona <em>START</em> y la lucha se iniciara.</p>
+            </div>
             <div id="progreso">
                 <div class="title-playerUno">
                     Player uno
@@ -57,7 +81,29 @@
                 <p class="vs">VS</p>
                 <div id="player2" class="player playerDos"></div>
             </div>
+            <div class="bombita">
+                <div class="explosion-player explosion-playerUno"><img src="img/explosion.gif" alt="" class="explosion"></div>
+                <div class="explosion-player explosion-playerDos"><img src="img/explosion.gif" alt="" class="explosion"></div>
+            </div>
+            <div class="start">
+                <button type="button" class="btn btn-success">START</button>
+            </div>
+        </div>
+        <!--PANTALLA CUATRO GANADOR / VOLVER A INICIAR-->
+        <div id="pantallaCuatro" style="display: block;">
+            <div id="players-final">
+                <div class="players-final player-perdedor"></div>
+                <div class="players-final player-ganador"></div>
+            </div>
 
+            <div class="volver">
+                <button type="button" class="btn btn-warning">BACK</button>
+            </div>
+
+            <div class="star">
+                <img src="img/star.png" alt="" class="star-player star-playerUno">
+                <img src="img/star.png" alt="" class="star-player star-playerDos">
+            </div>
         </div>
     </div>
 
