--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <p class="vs">VS</p>
                 <div id="player2" class="player">
-                    <img src="" alt="" class="avatarLucha">
+                    <img src="" alt="" class="avatar">
                 </div>
             </div>
             <div id="bombContainer">
